# mlx-quant-fidelity

./: .gitignore  CHANGELOG.md  NOTICE  README.md  ROADMAP.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
_artifacts/samples/: llama-3.2-1b-4bit-kv4.json  llama-3.2-1b-4bit-kv4.md  llama-3.2-1b-4bit-kv8.json  llama-3.2-1b-4bit-kv8.md  llama-3.2-3b-4bit-kv4.json  llama-3.2-3b-4bit-kv4.md  llama-3.2-3b-4bit-kv8.json  llama-3.2-3b-4bit-kv8.md  qwen2.5-7b-4bit-kv4.json  qwen2.5-7b-4bit-kv4.md  qwen2.5-7b-4bit-kv8.json  qwen2.5-7b-4bit-kv8.md
_artifacts/samples/compare/: kv-qwen2.5-0.5b.json  kv-qwen2.5-0.5b.md  weight-qwen2.5-0.5b.json  weight-qwen2.5-0.5b.md
_artifacts/samples/weights/: llama-3.2-1b-4bit-vs-bf16.json  llama-3.2-1b-4bit-vs-bf16.md  llama-3.2-1b-8bit-vs-bf16.json  llama-3.2-1b-8bit-vs-bf16.md  llama-3.2-3b-4bit-vs-bf16.json  llama-3.2-3b-4bit-vs-bf16.md  llama-3.2-3b-8bit-vs-bf16.json  llama-3.2-3b-8bit-vs-bf16.md  qwen2.5-7b-4bit-vs-8bit.json  qwen2.5-7b-4bit-vs-8bit.md
docs/: measurement-principles.md  ranking-principles.md
src/mlx_quant_fidelity/: __init__.py  _memory_caps.py  cli.py  costs.py  errors.py  policy.py  ranking.py  report.py
src/mlx_quant_fidelity/corpora/: __init__.py  provenance.py  wikitext.py
src/mlx_quant_fidelity/metrics/: __init__.py  aggregate.py  flip.py  kl.py  perplexity.py
src/mlx_quant_fidelity/probes/: __init__.py  _paired.py  kv.py  weights.py
src/mlx_quant_fidelity/runners/: __init__.py  _worker.py  compare.py
tests/: conftest.py  test_cli.py  test_compare_aggregate.py  test_compare_cli.py  test_compare_report.py  test_costs.py  test_errors.py  test_markers.py  test_memory_caps.py  test_policy.py  test_public_api.py  test_ranking.py  test_report.py  test_weight_report.py
tests/corpora/: test_chunking.py
tests/metrics/: test_aggregate.py  test_flip.py  test_kl.py  test_perplexity.py
tests/probes/: test_kv_fakeforward.py  test_kv_oracles.py  test_weights_fakeforward.py  test_weights_oracles.py
tests/runners/: test_compare_integration.py  test_compare_kv.py  test_compare_weight.py  test_worker.py
